# p05

./: .gitignore  Dockerfile  Dockerfile.client  README.md  docker-compose.yml  pyproject.toml  run.sh
.agents/: context.md  theory.md
client/: go.mod  main.go
client/pb/: raft.pb.go  raft_grpc.pb.go
src/client/: client.py  init_client.py
src/core/: config.py  logging.py  models.py  persistence.py
src/proto/: raft.proto
src/server/: election.py  heartbeat.py  init_server.py  proxy.py  raft_node.py  replication.py  server.py
