[project]
name = "p05"
version = "0.1.0"
description = "Raft consensus with gRPC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
]


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
